<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WellnessNet</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>

    <string name="welcomeAndRecordPrompt">Welcome to WellnessNet, please press the microphone and say \"I have \" followed by your symptoms</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="PastDiagnosesIntroduction">Below you will find the most recent diagnoses in your area</string>
    <string name="YourPastDiagnosesIntroduction">Below you will find your most recent diagnoses</string>
    <string name="WelcomePageAppDescription">Hello, to use WellnessNet, you can either choose
                                             from one of the below menu options or swipe from one to another by swiping right</string>



    <string name="tab0">Welcome</string>
    <string name="tab1">Search</string>
    <string name="tab2">Near You</string>
    <string name="tab3">History</string>
    <string name="title_activity_correct_string">CorrectStringActivity</string>
    <string name="title_activity_diagnosis_result">DiagnosisResult</string>

</resources>
